Fix: run script
